# flywheel

./: .gitattributes  .gitignore  README.md
data upload/: data_restructure.py
fw_data_manager/: project_merge.py  session_subject_rename.py
gears/ANTs/antsMultivariateTemplateConstruction/: Dockerfile  manifest.json  run.py
gears/ANTs/antsMultivariateTemplateConstruction2/: Dockerfile  manifest.json  run.py
gears/ANTs/antsRegistration/: Dockerfile  manifest.json  run.py
gears/ANTs/antsRegistrationSyN/: Dockerfile  manifest.json  run.py
gears/ANTs/antsRegistrationSyNQuick/: Dockerfile  README.md  manifest.json  run  run.py
gears/ANTs/applyTransforms/: Dockerfile  (+2 more)
gears/lc-contrast/: Dockerfile  manifest.json  run.py
gears/mark-normalized/: Dockerfile  manifest.json  run.py
gears/merger-of-acquisitions/: Dockerfile  README.md  manifest.json  run.py
gears/mriqc/: Dockerfile  README.md  manifest.json  run.py  run.sh
gears/mriqc-non-static/: .dockerignore  CONTRIBUTING.md  Dockerfile  FAQ.md  README.md  add_tag.py  manifest.json  pyproject.toml  remove_rate_widget.py  requirements-dev.txt  requirements.txt  run.py
gears/mriqc-non-static/docs/: release_notes.md
gears/mriqc-non-static/fw_gear_mriqc/: __init__.py  main.py  markup.py  parser.py  setup.py  utils.py
gears/mriqc-non-static/tests/: conftest.py  test_main.py  test_markup.py  test_parser.py  test_setup.py  test_utils.py
gears/multiEchoICA/: Dockerfile  manifest.json  run
gears/nifti-info/: Dockerfile  manifest.json  run.py
utils/ants-docker/: Dockerfile
utils/mark-inputs/: README.md
(+68 files in other folders)
